force-app/main/default/objects/WebServiceConfiguration__mdt/WebServiceConfiguration__mdt.object-meta.xml
<CustomObject>
    <description>Contains the configurations necessary for web services callouts.</description>
    <label>WebServiceConfiguration</label>
    <pluralLabel>WebServiceConfigurations</pluralLabel>
</CustomObject>