force-app/main/default/objects/WebServiceConfiguration__mdt/fields/AppId__c.field-meta.xml
<CustomField>
    <fullName>AppId__c</fullName>
    <description>The app id for REddit integration.</description>
    <label>AppId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>