force-app/main/default/objects/WebServiceConfiguration__mdt/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>The password to be used in the authentication.</description>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>