force-app/main/default/objects/WebServiceConfiguration__mdt/fields/Secret__c.field-meta.xml
<CustomField>
    <fullName>Secret__c</fullName>
    <description>THe secret to be used in the authentication.</description>
    <label>Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>