force-app/main/default/objects/WebServiceConfiguration__mdt/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>The username to be used in the authentication.</description>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>